--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Home</h1>
+
+<%= link_to "Logout", destroy_user_session_path, method: :delete %>
+
 <p>
   <%= @user.email %>
 </p>
