--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -11,10 +11,9 @@
     </div>
   <% end %>
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.hidden_field :user_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'add score' %>
   </div>
 <% end %>
