初期表示でuser_idがひとつ表示されないようにした

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,8 +5,8 @@
 </p>
 
 <tr>
-  <% @scores.each do |score| %>
-    <%= score.user_id %>
+  <% @scores.each do |s| %>
+    <%= s.user_id %>
   <% end %>
 </tr>
 
