表示する情報をuser_idからscoreの一覧に変更

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,11 +4,12 @@
   <%= @user.email %>
 </p>
 
+<%= render 'form' %>
+
 <tr>
   <% @scores.each do |s| %>
-    <%= s.user_id %>
+    <%= s.created_at %>
+    <br>
   <% end %>
 </tr>
-
-<%= render 'form' %>
 
