--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
 <tr>
   <% @scores.each do |s| %>
-    <%= s.created_at %>
+    <%= s.created_at.strftime("%Y/%m/%d %X") %>
     <br>
   <% end %>
 </tr>
