--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,10 +6,38 @@
 
 <%= render 'form' %>
 
+<table>
+  <td>
+    <% if !@scores.nil? %>
+      <%= @now.strftime("%Y/%m/%d %X") %>
+    <% end %>
+  </td>
+</table>
+
+<table>
 <tr>
-  <% @scores.each do |s| %>
-    <%= s.created_at.strftime("%Y/%m/%d %X") %>
-    <br>
+  <% @da.each do |d| %>
+    <td>
+      <%= d.strftime("%d")%>
+    </td>
   <% end %>
 </tr>
+</table>
+
+<table>
+<tr>
+  <td>
+    <% if !@scores.nil? %>
+      <%= @scores.size %>
+    <% end %>
+  </td>
+</tr>
+  <% @scores.each do |s| %>
+<tr>
+    <td>
+      <%= s.created_at.strftime("%Y/%m/%d %X") %>
+    </td>
+</tr>
+  <% end %>
+</table>
 
