--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Home</h1>
+<h1>Academy Score</h1>
 
 <p>
   <%= @user.email %>
@@ -14,31 +14,15 @@
   </td>
 </table>
 
+<% if !@scores.nil? %>
+  Total Score : <%= @scores.size %>
+<% end %>
+
 <table>
 <tr>
   <% @date_array.each do |d| %>
-    <td>
+    <td bgcolor=<%= d["color"] %>>
       <%= d["date"].strftime("%d")%>
-      <%= d["score"] %>
     </td>
   <% end %>
 </tr>
-</table>
-
-<table>
-<tr>
-  <td>
-    <% if !@scores.nil? %>
-      <%= @scores.size %>
-    <% end %>
-  </td>
-</tr>
-  <% @scores.each do |s| %>
-<tr>
-    <td>
-      <%= s.created_at.strftime("%Y/%m/%d %X") %>
-    </td>
-</tr>
-  <% end %>
-</table>
-
