--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@score) do |f| %>
+<%= form_for(Score.new) do |f| %>
 
   <% if @score.errors.any? %>
     <div id="error_explanation">
