add badge using merit with devise

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,3 +16,9 @@ Total Score : <%= @total_score %>
     </td>
   <% end %>
 </tr>
+
+<ul>
+<% current_user.badges.each do |badge| %>
+  <li><%= badge.name %></li>
+<% end %>
+</ul>
